--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!-- Aquí cargamos la imagen -->
-<img id="image" src="https://i.imgur.com/L2gFUg4.png" Promoción Críptica">
+<img id="image" src="https://i.imgur.com/L2gFUg4.png" alt="Promoción Críptica">
+
 
 <!-- Aquí aparecerá la cuenta regresiva -->
 <div class="countdown" id="countdown"></div>
