--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
-<!-- Aquí cargamos la imagen -->
-<img id="image" src="https://i.imgur.com/L2gFUg4.png" alt="Promoción Críptica">
+html
+Copiar código
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Countdown</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <!-- Here we load the image -->
+    <img id="image" src="https://i.imgur.com/L2gFUg4.png" alt="Promoción Críptica">
+    <!-- Countdown will appear here -->
+    <div class="countdown" id="countdown"></div>
 
-
-<!-- Aquí aparecerá la cuenta regresiva -->
-<div class="countdown" id="countdown"></div>
+    <!-- Link to your JavaScript -->
+    <script src="script.js"></script>
+</body>
+</html>
