--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Here we load the image -->
+    <!-- Corrected Image and Countdown -->
     <img id="image" src="https://i.imgur.com/L2gFUg4.png" alt="Promoción Críptica">
-    <!-- Countdown will appear here -->
     <div class="countdown" id="countdown"></div>
 
-    <!-- Link to your JavaScript -->
+    <!-- JavaScript at the bottom -->
     <script src="script.js"></script>
 </body>
 </html>
